# estudoFastAPI

./: pyproject.toml
